# Mole-GUI

./: .gitignore  AGENTS.md  FILES_CHANGED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICK_VERSION_GUIDE.md  README.md  VERSION_MANAGEMENT.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: README.md  update-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/mole/: mod.rs  process.rs  settings.rs  sudo.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/shared/: ConfirmDialog.tsx  DeleteConfirmDialog.tsx  ErrorBanner.tsx  ProgressBar.tsx
src/hooks/: useMoleCommand.ts  useScanStore.ts  useTabStore.ts
src/i18n/: context.tsx  en.ts  index.ts  store.ts  types.ts  zh.ts
src/pages/: AnalyzePage.tsx  CleanPage.tsx  DashboardPage.tsx  HistoryPage.tsx  OptimizePage.tsx  PurgePage.tsx  SettingsPage.tsx  UninstallPage.tsx  WhitelistPage.tsx
src/types/: analyze.ts  clean.ts  common.ts  optimize.ts  purge.ts  uninstall.ts
tauri-gui/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
tauri-gui/icons/: icon.icns
tauri-gui/src/: lib.rs  main.rs
tauri-gui/src/commands/: mod.rs
tauri-gui/src/mole/: mod.rs  process.rs  settings.rs  sudo.rs
