[package]
name = "mole-gui"
version = "1.0.0"
description = "Mole - macOS Cleanup Toolkit GUI"
authors = ["tw93"]
edition = "2021"

[lib]
name = "mole_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
